# Amanogawa

./: .gitattributes  .gitignore  AGENTS.md  Amanogawa.ipynb  Amanogawa_dark.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  README_ja.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: IMG_5990.heic
docs/: USER_GUIDE.md  calibration_protocol.md  notebook_api_migration_ja.md  reproducibility.md  scientific_assumptions.md  validation_plan.md
notebooks/: 01_band_analysis.ipynb  02_dark_morphology.ipynb  03_astronomical_validity.ipynb  Amanogawa_band.ipynb  Amanogawa_dark.ipynb  band_roi_contrast_summary.json  dark_morphology_summary.json
notebooks/backup/: Amanogawa_dark.ipynb
outputs/: ANALYSIS_MASTER_SUMMARY.json  README.md  sample_star_coords.csv
outputs/results/: sample_analysis_summary.json  threshold_sensitivity_analysis.csv
paper/: CITATION.cff  paper.bib  paper.html  paper.md
paper/jats/: paper.jats
src/: band_geometry.py  detection.py  photometry.py  plotting.py  spatial_stats.py
src/amanogawa/: __init__.py  band_geometry.py  dark_morphology.py  detection.py  fits_export.py  io.py  photometry.py  run.py  spatial_stats.py
src/amanogawa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/amanogawa/calibration/: __init__.py  core.py
tests/: test_band_geometry.py  test_cli.py  test_dark_morphology.py  test_detection.py  test_empty_inputs.py  test_fits_header_mapping.py  test_io.py  test_photometry.py  test_placeholder.py  test_reproducibility_seed.py  test_spatial_stats.py
(+12 files in other folders)
